# CppNCorr

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakeOptions.md  Doxyfile  NEWVERSION_CHANGES.md  PR_BODY.md  README.md  TESTS_PLAN.md  build.sh  codecov.yml
.github/: release.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: FetchDependencies.cmake
config/: default.cfg
deploy/: Dockerfile  README.md  run_slurm.sh
docs/: developer_guide.md  quickstart.md  user_guide.md
include/: Array2D.h  Array2DFFTW.h  Array2DLinSolver.h  Array2DOpenCV.h  Data2D.h  Disp2D.h  Image2D.h  ImageProcessor.h  ROI2D.h  Strain2D.h  VideoImporter.h  ncorr.h
include/ncorr/: config.h  frame_reader.h  ini.h  log.h  ncorr.hpp  session.h
include/ncorr/algo/: seed_analysis.hpp
include/ncorr/core/: array2d.hpp  array2d_fftw.hpp  array2d_linsolver.hpp  array2d_opencv.hpp  data2d.hpp  disp2d.hpp  image2d.hpp  image_processor.hpp  roi2d.hpp  strain2d.hpp  video_importer.hpp
include/ncorr/internal/: diagnostics.hpp
include/ncorr/io/: binary_io.hpp
src/: Array2D.cpp  Data2D.cpp  Disp2D.cpp  Image2D.cpp  ImageProcessor.cpp  VideoImporter.cpp  config.cpp  log.cpp  ncorr.cpp  ncorr_seed.cpp  ncorr_serialization.cpp  ncorr_visualization.cpp  session.cpp
test/: CMakeLists.txt  build_test.sh  tests.cmake
test/e2e/: test_e2e.cpp
test/examples/: proxyncorr_config.txt  seeds.json
test/integration/: test_pipeline.cpp
test/src/: interpolator_test.cpp  ncorr_cubic_interpolator_test.cpp  ncorr_interpolator_test.cpp  ncorr_nloptimizer_test.cpp  ncorr_test_chain_seam.cpp  ncorr_test_cubic.cpp  ncorr_test_json.cpp  ncorr_test_parallel.cpp  ncorr_test_parity.cpp  ncorr_test_rgdic_verification.cpp  ncorr_test_sequential.cpp  ncorr_test_verif.cpp  proxyncorr.cpp  roi2d_reduce_test.cpp
test/unit/: test_config.cpp  test_frame_reader.cpp  test_ini.cpp  test_session.cpp
