CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(ncorr_test)

# Only tested for g++ on Ubuntu 12.04. This assumes all required libraries have been 
# installed, so directories to dependent libraries and their headers are not explicitly 
# included, since the install directories are searched automatically by g++.

# Set output for executable
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin)

# Add executables
ADD_EXECUTABLE(ncorr_test src/ncorr_test.cpp)
ADD_EXECUTABLE(ncorr_test_cubic src/ncorr_test_cubic.cpp)
ADD_EXECUTABLE(ncorr_test_json src/ncorr_test_json.cpp)
ADD_EXECUTABLE(ncorr_test_verif src/ncorr_test_verif.cpp)
ADD_EXECUTABLE(ncorr_test_parity src/ncorr_test_parity.cpp)
ADD_EXECUTABLE(interpolator_test src/interpolator_test.cpp)
ADD_EXECUTABLE(ncorr_interpolator_test src/ncorr_interpolator_test.cpp)
ADD_EXECUTABLE(ncorr_cubic_interpolator_test src/ncorr_cubic_interpolator_test.cpp)
ADD_EXECUTABLE(ncorr_nloptimizer_test src/ncorr_nloptimizer_test.cpp)
ADD_EXECUTABLE(roi2d_reduce_test src/roi2d_reduce_test.cpp)
ADD_EXECUTABLE(ncorr_test_rgdic_verification src/ncorr_test_rgdic_verification.cpp)

# Set C++11 support
set_property(TARGET ncorr_test PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ncorr_test_cubic PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_test_cubic PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ncorr_test_json PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_test_json PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ncorr_test_verif PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_test_verif PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ncorr_test_parity PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_test_parity PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET interpolator_test PROPERTY CXX_STANDARD 11)
set_property(TARGET interpolator_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ncorr_interpolator_test PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_interpolator_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ncorr_cubic_interpolator_test PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_cubic_interpolator_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ncorr_nloptimizer_test PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_nloptimizer_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET roi2d_reduce_test PROPERTY CXX_STANDARD 11)
set_property(TARGET roi2d_reduce_test PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ncorr_test_rgdic_verification PROPERTY CXX_STANDARD 11)
set_property(TARGET ncorr_test_rgdic_verification PROPERTY CXX_STANDARD_REQUIRED ON)

# Set -03 optimization
INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-O3" COMPILER_SUPPORTS_O3)
if (COMPILER_SUPPORTS_O3)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
endif()

# Set include directories
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -isystem /opt/homebrew/include")

# Disable debugging
ADD_DEFINITIONS(-DNDEBUG)

# Find OpenCV
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(ncorr_test ${OpenCV_LIBS})
target_link_libraries(ncorr_test_cubic ${OpenCV_LIBS})
target_link_libraries(ncorr_test_json ${OpenCV_LIBS})
target_link_libraries(ncorr_test_verif ${OpenCV_LIBS})
target_link_libraries(ncorr_test_parity ${OpenCV_LIBS})
target_link_libraries(interpolator_test ${OpenCV_LIBS})
target_link_libraries(ncorr_interpolator_test ${OpenCV_LIBS})
target_link_libraries(ncorr_cubic_interpolator_test ${OpenCV_LIBS})
target_link_libraries(ncorr_nloptimizer_test ${OpenCV_LIBS})
target_link_libraries(roi2d_reduce_test ${OpenCV_LIBS})
target_link_libraries(ncorr_test_rgdic_verification ${OpenCV_LIBS})

# Add ncorr library
add_subdirectory(.. ${CMAKE_CURRENT_BINARY_DIR}/ncorr_lib)
TARGET_LINK_LIBRARIES(ncorr_test ncorr)
TARGET_LINK_LIBRARIES(ncorr_test_cubic ncorr)
TARGET_LINK_LIBRARIES(ncorr_test_json ncorr)
target_link_libraries(ncorr_test_verif ncorr)
target_link_libraries(ncorr_test_parity ncorr)
target_link_libraries(interpolator_test ncorr)
target_link_libraries(ncorr_interpolator_test ncorr)
target_link_libraries(ncorr_cubic_interpolator_test ncorr)
target_link_libraries(ncorr_nloptimizer_test ncorr)
target_link_libraries(roi2d_reduce_test ncorr)
target_link_libraries(ncorr_test_rgdic_verification ncorr)

# Add opencv libraries
FIND_LIBRARY(OPENCV_LIBRARY1 NAMES opencv_core)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY1})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY1})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY1})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY1})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY1})

FIND_LIBRARY(OPENCV_LIBRARY2 NAMES opencv_highgui)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY2})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY2})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY2})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY2})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY2})

FIND_LIBRARY(OPENCV_LIBRARY3 NAMES opencv_imgcodecs)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY3})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY3})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY3})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY3})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY3})

FIND_LIBRARY(OPENCV_LIBRARY4 NAMES opencv_imgproc)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY4})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY4})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY4})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY4})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY4})

FIND_LIBRARY(OPENCV_LIBRARY5 NAMES opencv_videoio)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY5})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY5})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY5})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY5})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY5})

# Add fftw library
FIND_LIBRARY(FFTW_LIBRARY NAMES fftw3)
TARGET_LINK_LIBRARIES(ncorr_test ${FFTW_LIBRARY})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${FFTW_LIBRARY})
TARGET_LINK_LIBRARIES(ncorr_test_json ${FFTW_LIBRARY})
target_link_libraries(ncorr_test_verif ${FFTW_LIBRARY})
target_link_libraries(ncorr_test_parity ${FFTW_LIBRARY})
target_link_libraries(interpolator_test ${FFTW_LIBRARY})
target_link_libraries(ncorr_interpolator_test ${FFTW_LIBRARY})
target_link_libraries(ncorr_cubic_interpolator_test ${FFTW_LIBRARY})
target_link_libraries(ncorr_nloptimizer_test ${FFTW_LIBRARY})
target_link_libraries(roi2d_reduce_test ${FFTW_LIBRARY})
target_link_libraries(ncorr_test_rgdic_verification ${FFTW_LIBRARY})

# Add suite sparse libraries
FIND_LIBRARY(SUITESPARSE_LIBRARY1 NAMES spqr)
TARGET_LINK_LIBRARIES(ncorr_test ${SUITESPARSE_LIBRARY1})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${SUITESPARSE_LIBRARY1})
TARGET_LINK_LIBRARIES(ncorr_test_json ${SUITESPARSE_LIBRARY1})
target_link_libraries(ncorr_test_verif ${SUITESPARSE_LIBRARY1})
target_link_libraries(ncorr_test_parity ${SUITESPARSE_LIBRARY1})
target_link_libraries(interpolator_test ${SUITESPARSE_LIBRARY1})
target_link_libraries(ncorr_interpolator_test ${SUITESPARSE_LIBRARY1})
target_link_libraries(ncorr_cubic_interpolator_test ${SUITESPARSE_LIBRARY1})
target_link_libraries(ncorr_nloptimizer_test ${SUITESPARSE_LIBRARY1})
target_link_libraries(roi2d_reduce_test ${SUITESPARSE_LIBRARY1})
target_link_libraries(ncorr_test_rgdic_verification ${SUITESPARSE_LIBRARY1})

FIND_LIBRARY(SUITESPARSE_LIBRARY2 NAMES cholmod)
TARGET_LINK_LIBRARIES(ncorr_test ${SUITESPARSE_LIBRARY2})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${SUITESPARSE_LIBRARY2})
TARGET_LINK_LIBRARIES(ncorr_test_json ${SUITESPARSE_LIBRARY2})
target_link_libraries(ncorr_test_verif ${SUITESPARSE_LIBRARY2})
target_link_libraries(ncorr_test_parity ${SUITESPARSE_LIBRARY2})
target_link_libraries(interpolator_test ${SUITESPARSE_LIBRARY2})
target_link_libraries(ncorr_interpolator_test ${SUITESPARSE_LIBRARY2})
target_link_libraries(ncorr_cubic_interpolator_test ${SUITESPARSE_LIBRARY2})
target_link_libraries(ncorr_nloptimizer_test ${SUITESPARSE_LIBRARY2})
target_link_libraries(roi2d_reduce_test ${SUITESPARSE_LIBRARY2})
target_link_libraries(ncorr_test_rgdic_verification ${SUITESPARSE_LIBRARY2})

FIND_LIBRARY(SUITESPARSE_LIBRARY3 NAMES suitesparseconfig)
TARGET_LINK_LIBRARIES(ncorr_test ${SUITESPARSE_LIBRARY3})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${SUITESPARSE_LIBRARY3})
TARGET_LINK_LIBRARIES(ncorr_test_json ${SUITESPARSE_LIBRARY3})
target_link_libraries(ncorr_test_verif ${SUITESPARSE_LIBRARY3})
target_link_libraries(ncorr_test_parity ${SUITESPARSE_LIBRARY3})
target_link_libraries(interpolator_test ${SUITESPARSE_LIBRARY3})
target_link_libraries(ncorr_interpolator_test ${SUITESPARSE_LIBRARY3})
target_link_libraries(ncorr_cubic_interpolator_test ${SUITESPARSE_LIBRARY3})
target_link_libraries(ncorr_nloptimizer_test ${SUITESPARSE_LIBRARY3})
target_link_libraries(roi2d_reduce_test ${SUITESPARSE_LIBRARY3})
target_link_libraries(ncorr_test_rgdic_verification ${SUITESPARSE_LIBRARY3})

FIND_LIBRARY(SUITESPARSE_LIBRARY4 NAMES amd)
TARGET_LINK_LIBRARIES(ncorr_test ${SUITESPARSE_LIBRARY4})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${SUITESPARSE_LIBRARY4})
TARGET_LINK_LIBRARIES(ncorr_test_json ${SUITESPARSE_LIBRARY4})
target_link_libraries(ncorr_test_verif ${SUITESPARSE_LIBRARY4})
target_link_libraries(ncorr_test_parity ${SUITESPARSE_LIBRARY4})
target_link_libraries(interpolator_test ${SUITESPARSE_LIBRARY4})
target_link_libraries(ncorr_interpolator_test ${SUITESPARSE_LIBRARY4})
target_link_libraries(ncorr_cubic_interpolator_test ${SUITESPARSE_LIBRARY4})
target_link_libraries(ncorr_nloptimizer_test ${SUITESPARSE_LIBRARY4})
target_link_libraries(roi2d_reduce_test ${SUITESPARSE_LIBRARY4})
target_link_libraries(ncorr_test_rgdic_verification ${SUITESPARSE_LIBRARY4})

FIND_LIBRARY(SUITESPARSE_LIBRARY5 NAMES colamd)
TARGET_LINK_LIBRARIES(ncorr_test ${SUITESPARSE_LIBRARY5})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${SUITESPARSE_LIBRARY5})
TARGET_LINK_LIBRARIES(ncorr_test_json ${SUITESPARSE_LIBRARY5})
target_link_libraries(ncorr_test_verif ${SUITESPARSE_LIBRARY5})
target_link_libraries(ncorr_test_parity ${SUITESPARSE_LIBRARY5})
target_link_libraries(interpolator_test ${SUITESPARSE_LIBRARY5})
target_link_libraries(ncorr_interpolator_test ${SUITESPARSE_LIBRARY5})
target_link_libraries(ncorr_cubic_interpolator_test ${SUITESPARSE_LIBRARY5})
target_link_libraries(ncorr_nloptimizer_test ${SUITESPARSE_LIBRARY5})
target_link_libraries(roi2d_reduce_test ${SUITESPARSE_LIBRARY5})
target_link_libraries(ncorr_test_rgdic_verification ${SUITESPARSE_LIBRARY5})

# Add lapack library
FIND_LIBRARY(LAPACK_LIBRARY NAMES lapack)
TARGET_LINK_LIBRARIES(ncorr_test ${LAPACK_LIBRARY})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${LAPACK_LIBRARY})
TARGET_LINK_LIBRARIES(ncorr_test_json ${LAPACK_LIBRARY})
target_link_libraries(ncorr_test_verif ${LAPACK_LIBRARY})
target_link_libraries(ncorr_test_parity ${LAPACK_LIBRARY})
target_link_libraries(interpolator_test ${LAPACK_LIBRARY})
target_link_libraries(ncorr_interpolator_test ${LAPACK_LIBRARY})
target_link_libraries(ncorr_cubic_interpolator_test ${LAPACK_LIBRARY})
target_link_libraries(ncorr_nloptimizer_test ${LAPACK_LIBRARY})
target_link_libraries(roi2d_reduce_test ${LAPACK_LIBRARY})
target_link_libraries(ncorr_test_rgdic_verification ${LAPACK_LIBRARY})

# Add blas library
FIND_LIBRARY(BLAS_LIBRARY NAMES blas)
TARGET_LINK_LIBRARIES(ncorr_test ${BLAS_LIBRARY})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${BLAS_LIBRARY})
TARGET_LINK_LIBRARIES(ncorr_test_json ${BLAS_LIBRARY})
target_link_libraries(ncorr_test_verif ${BLAS_LIBRARY})
target_link_libraries(ncorr_test_parity ${BLAS_LIBRARY})
target_link_libraries(interpolator_test ${BLAS_LIBRARY})
target_link_libraries(ncorr_interpolator_test ${BLAS_LIBRARY})
target_link_libraries(ncorr_cubic_interpolator_test ${BLAS_LIBRARY})
target_link_libraries(ncorr_nloptimizer_test ${BLAS_LIBRARY})
target_link_libraries(roi2d_reduce_test ${BLAS_LIBRARY})
target_link_libraries(ncorr_test_rgdic_verification ${BLAS_LIBRARY})

# Add gfortran library (required from blas)
#FIND_LIBRARY(GFORTRAN_LIBRARY NAMES gfortran)
#TARGET_LINK_LIBRARIES(ncorr_test ${GFORTRAN_LIBRARY})

# Add pthreads
FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(ncorr_test ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(ncorr_test_json ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_test_verif ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_test_parity ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(interpolator_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_interpolator_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_cubic_interpolator_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_nloptimizer_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(roi2d_reduce_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_test_rgdic_verification ${CMAKE_THREAD_LIBS_INIT})

# Find and link nlohmann/json library for ncorr_test_json, ncorr_test_verif
find_package(nlohmann_json CONFIG)
if(nlohmann_json_FOUND)
  target_link_libraries(ncorr_test_cubic nlohmann_json::nlohmann_json)
  target_link_libraries(ncorr_test_json nlohmann_json::nlohmann_json)
  target_link_libraries(ncorr_test_verif nlohmann_json::nlohmann_json)
  target_link_libraries(ncorr_test_parity nlohmann_json::nlohmann_json)
  target_link_libraries(interpolator_test nlohmann_json::nlohmann_json)
  target_link_libraries(ncorr_interpolator_test nlohmann_json::nlohmann_json)
  target_link_libraries(ncorr_cubic_interpolator_test nlohmann_json::nlohmann_json)
  target_link_libraries(ncorr_nloptimizer_test nlohmann_json::nlohmann_json)
  target_link_libraries(roi2d_reduce_test nlohmann_json::nlohmann_json)
  target_link_libraries(ncorr_test_rgdic_verification nlohmann_json::nlohmann_json)
else()
  # If package not found via find_package, try to find the header-only library
  find_path(NLOHMANN_JSON_INCLUDE_DIRS "nlohmann/json.hpp" 
            PATHS /usr/include /usr/local/include /opt/homebrew/include)
  if(NLOHMANN_JSON_INCLUDE_DIRS)
    include_directories(${NLOHMANN_JSON_INCLUDE_DIRS})
    message(STATUS "Found nlohmann/json include directory: ${NLOHMANN_JSON_INCLUDE_DIRS}")
  else()
    message(FATAL_ERROR "nlohmann/json library not found. Please install it using your package manager.")
  endif()
endif()
