CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
PROJECT(ncorr_test)

# Include FetchContent fallbacks for systems without root access
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
include(FetchDependencies)

# Option to force fetching all dependencies (useful for reproducible builds)
option(FORCE_FETCH_DEPENDENCIES "Force using FetchContent for all dependencies" OFF)

# Only tested for g++ on Ubuntu 12.04. This assumes all required libraries have been 
# installed, so directories to dependent libraries and their headers are not explicitly 
# included, since the install directories are searched automatically by g++.

# Set C++17 support (required for std::optional and modern features)
# Must be set before any targets are defined
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set output for executable
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin)

# Make sure we prefer the project's headers over system headers
include_directories(BEFORE ../include)

# Add executables
ADD_EXECUTABLE(ncorr_test src/ncorr_test.cpp)
ADD_EXECUTABLE(ncorr_test_cubic src/ncorr_test_cubic.cpp)
ADD_EXECUTABLE(ncorr_test_json src/ncorr_test_json.cpp)
ADD_EXECUTABLE(ncorr_test_verif src/ncorr_test_verif.cpp)
ADD_EXECUTABLE(ncorr_test_parity src/ncorr_test_parity.cpp)
ADD_EXECUTABLE(interpolator_test src/interpolator_test.cpp)
ADD_EXECUTABLE(ncorr_interpolator_test src/ncorr_interpolator_test.cpp)
ADD_EXECUTABLE(ncorr_cubic_interpolator_test src/ncorr_cubic_interpolator_test.cpp)
ADD_EXECUTABLE(ncorr_nloptimizer_test src/ncorr_nloptimizer_test.cpp)
ADD_EXECUTABLE(roi2d_reduce_test src/roi2d_reduce_test.cpp)
ADD_EXECUTABLE(ncorr_test_rgdic_verification src/ncorr_test_rgdic_verification.cpp)
ADD_EXECUTABLE(ncorr_test_sequential src/ncorr_test_sequential.cpp)
ADD_EXECUTABLE(ncorr_test_parallel src/ncorr_test_parallel.cpp)
ADD_EXECUTABLE(proxyncorr src/proxyncorr.cpp)

# Set -03 optimization
INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-O3" COMPILER_SUPPORTS_O3)
if (COMPILER_SUPPORTS_O3)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
endif()

# Find OpenMP - with special handling for Mac Homebrew
if(APPLE)
    # Check for Homebrew OpenMP installation
    if(EXISTS "/opt/homebrew/opt/libomp")
        set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp -I/opt/homebrew/opt/libomp/include")
        set(OpenMP_C_LIB_NAMES "omp")
        set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp -I/opt/homebrew/opt/libomp/include")
        set(OpenMP_CXX_LIB_NAMES "omp")
        set(OpenMP_omp_LIBRARY "/opt/homebrew/opt/libomp/lib/libomp.dylib")
    elseif(EXISTS "/usr/local/opt/libomp")
        set(OpenMP_C_FLAGS "-Xpreprocessor -fopenmp -I/usr/local/opt/libomp/include")
        set(OpenMP_C_LIB_NAMES "omp")
        set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp -I/usr/local/opt/libomp/include")
        set(OpenMP_CXX_LIB_NAMES "omp")
        set(OpenMP_omp_LIBRARY "/usr/local/opt/libomp/lib/libomp.dylib")
    endif()
endif()

find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    message(STATUS "OpenMP found for tests - enabling parallel support")
endif()

# Set include directories (only for Mac Homebrew)
if(APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -isystem /opt/homebrew/include")
endif()

# Disable debugging
ADD_DEFINITIONS(-DNDEBUG)

# Find OpenCV (with FetchContent fallback)
find_or_fetch_opencv()
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(ncorr_test ${OpenCV_LIBS})
target_link_libraries(ncorr_test_cubic ${OpenCV_LIBS})
target_link_libraries(ncorr_test_json ${OpenCV_LIBS})
target_link_libraries(ncorr_test_verif ${OpenCV_LIBS})
target_link_libraries(ncorr_test_parity ${OpenCV_LIBS})
target_link_libraries(interpolator_test ${OpenCV_LIBS})
target_link_libraries(ncorr_interpolator_test ${OpenCV_LIBS})
target_link_libraries(ncorr_cubic_interpolator_test ${OpenCV_LIBS})
target_link_libraries(ncorr_nloptimizer_test ${OpenCV_LIBS})
target_link_libraries(roi2d_reduce_test ${OpenCV_LIBS})
target_link_libraries(ncorr_test_rgdic_verification ${OpenCV_LIBS})
target_link_libraries(ncorr_test_sequential ${OpenCV_LIBS})
target_link_libraries(ncorr_test_parallel ${OpenCV_LIBS})
target_link_libraries(proxyncorr ${OpenCV_LIBS})

# Add ncorr library
add_subdirectory(.. ${CMAKE_CURRENT_BINARY_DIR}/ncorr_lib)
TARGET_LINK_LIBRARIES(ncorr_test ncorr)
TARGET_LINK_LIBRARIES(ncorr_test_cubic ncorr)
TARGET_LINK_LIBRARIES(ncorr_test_json ncorr)
target_link_libraries(ncorr_test_verif ncorr)
target_link_libraries(ncorr_test_parity ncorr)
target_link_libraries(interpolator_test ncorr)
target_link_libraries(ncorr_interpolator_test ncorr)
target_link_libraries(ncorr_cubic_interpolator_test ncorr)
target_link_libraries(ncorr_nloptimizer_test ncorr)
target_link_libraries(roi2d_reduce_test ncorr)
target_link_libraries(ncorr_test_rgdic_verification ncorr)
target_link_libraries(ncorr_test_sequential ncorr)
target_link_libraries(ncorr_test_parallel ncorr)
target_link_libraries(proxyncorr ncorr)

# Link OpenMP to test executables
if(OpenMP_CXX_FOUND)
    target_link_libraries(ncorr_test OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_test_cubic OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_test_json OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_test_verif OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_test_parity OpenMP::OpenMP_CXX)
    target_link_libraries(interpolator_test OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_interpolator_test OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_cubic_interpolator_test OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_nloptimizer_test OpenMP::OpenMP_CXX)
    target_link_libraries(roi2d_reduce_test OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_test_rgdic_verification OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_test_sequential OpenMP::OpenMP_CXX)
    target_link_libraries(ncorr_test_parallel OpenMP::OpenMP_CXX)
    target_link_libraries(proxyncorr OpenMP::OpenMP_CXX)
endif()

# Add opencv libraries
FIND_LIBRARY(OPENCV_LIBRARY1 NAMES opencv_core)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY1})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY1})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY1})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY1})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_test_sequential ${OPENCV_LIBRARY1})
target_link_libraries(ncorr_test_parallel ${OPENCV_LIBRARY1})
target_link_libraries(proxyncorr ${OPENCV_LIBRARY1})

FIND_LIBRARY(OPENCV_LIBRARY2 NAMES opencv_highgui)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY2})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY2})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY2})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY2})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_test_sequential ${OPENCV_LIBRARY2})
target_link_libraries(ncorr_test_parallel ${OPENCV_LIBRARY2})
target_link_libraries(proxyncorr ${OPENCV_LIBRARY2})

FIND_LIBRARY(OPENCV_LIBRARY3 NAMES opencv_imgcodecs)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY3})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY3})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY3})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY3})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_test_sequential ${OPENCV_LIBRARY3})
target_link_libraries(ncorr_test_parallel ${OPENCV_LIBRARY3})
target_link_libraries(proxyncorr ${OPENCV_LIBRARY3})

FIND_LIBRARY(OPENCV_LIBRARY4 NAMES opencv_imgproc)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY4})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY4})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY4})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY4})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_test_sequential ${OPENCV_LIBRARY4})
target_link_libraries(ncorr_test_parallel ${OPENCV_LIBRARY4})
target_link_libraries(proxyncorr ${OPENCV_LIBRARY4})

FIND_LIBRARY(OPENCV_LIBRARY5 NAMES opencv_videoio)
TARGET_LINK_LIBRARIES(ncorr_test ${OPENCV_LIBRARY5})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${OPENCV_LIBRARY5})
TARGET_LINK_LIBRARIES(ncorr_test_json ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_test_verif ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_test_parity ${OPENCV_LIBRARY5})
target_link_libraries(interpolator_test ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_interpolator_test ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_cubic_interpolator_test ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_nloptimizer_test ${OPENCV_LIBRARY5})
target_link_libraries(roi2d_reduce_test ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_test_rgdic_verification ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_test_sequential ${OPENCV_LIBRARY5})
target_link_libraries(ncorr_test_parallel ${OPENCV_LIBRARY5})
target_link_libraries(proxyncorr ${OPENCV_LIBRARY5})

# Add fftw library (with FetchContent fallback)
find_or_fetch_fftw()
TARGET_LINK_LIBRARIES(ncorr_test ${FFTW_LIBRARY})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${FFTW_LIBRARY})
TARGET_LINK_LIBRARIES(ncorr_test_json ${FFTW_LIBRARY})
target_link_libraries(ncorr_test_verif ${FFTW_LIBRARY})
target_link_libraries(ncorr_test_parity ${FFTW_LIBRARY})
target_link_libraries(interpolator_test ${FFTW_LIBRARY})
target_link_libraries(ncorr_interpolator_test ${FFTW_LIBRARY})
target_link_libraries(ncorr_cubic_interpolator_test ${FFTW_LIBRARY})
target_link_libraries(ncorr_nloptimizer_test ${FFTW_LIBRARY})
target_link_libraries(roi2d_reduce_test ${FFTW_LIBRARY})
target_link_libraries(ncorr_test_rgdic_verification ${FFTW_LIBRARY})
target_link_libraries(ncorr_test_sequential ${FFTW_LIBRARY})
target_link_libraries(ncorr_test_parallel ${FFTW_LIBRARY})
target_link_libraries(proxyncorr ${FFTW_LIBRARY})

# Add suite sparse libraries (with FetchContent fallback)
find_or_fetch_suitesparse()
foreach(target ncorr_test ncorr_test_cubic ncorr_test_json ncorr_test_verif 
               ncorr_test_parity interpolator_test ncorr_interpolator_test 
               ncorr_cubic_interpolator_test ncorr_nloptimizer_test roi2d_reduce_test 
               ncorr_test_rgdic_verification ncorr_test_sequential ncorr_test_parallel proxyncorr)
    target_link_libraries(${target} ${SUITESPARSE_LIBRARIES})
endforeach()

# Add BLAS/LAPACK libraries (with OpenBLAS FetchContent fallback)
find_or_fetch_openblas()
foreach(target ncorr_test ncorr_test_cubic ncorr_test_json ncorr_test_verif 
               ncorr_test_parity interpolator_test ncorr_interpolator_test 
               ncorr_cubic_interpolator_test ncorr_nloptimizer_test roi2d_reduce_test 
               ncorr_test_rgdic_verification ncorr_test_sequential ncorr_test_parallel proxyncorr)
    target_link_libraries(${target} ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})
endforeach()

# Add gfortran library (required from blas)
#FIND_LIBRARY(GFORTRAN_LIBRARY NAMES gfortran)
#TARGET_LINK_LIBRARIES(ncorr_test ${GFORTRAN_LIBRARY})

# Add pthreads
FIND_PACKAGE(Threads)
TARGET_LINK_LIBRARIES(ncorr_test ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(ncorr_test_cubic ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(ncorr_test_json ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_test_verif ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_test_parity ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(interpolator_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_interpolator_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_cubic_interpolator_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_nloptimizer_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(roi2d_reduce_test ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_test_rgdic_verification ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_test_sequential ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ncorr_test_parallel ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(proxyncorr ${CMAKE_THREAD_LIBS_INIT})

# Find and link nlohmann/json library (with FetchContent fallback)
find_or_fetch_nlohmann_json()
foreach(target ncorr_test_cubic ncorr_test_json ncorr_test_verif ncorr_test_parity 
               interpolator_test ncorr_interpolator_test ncorr_cubic_interpolator_test 
               ncorr_nloptimizer_test roi2d_reduce_test ncorr_test_rgdic_verification 
               ncorr_test_sequential ncorr_test_parallel proxyncorr)
    target_link_libraries(${target} nlohmann_json::nlohmann_json)
endforeach()
